# churnlab-equilibria

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  config.py  pyproject.toml  requirements.txt  sim_engine.py
population/: PopulationBranch.py  influx.py  row_generator.py
strategy/: baseline_arr_forgetful.py  baseline_heuristics.py  baseline_heuristics_v1.py  baseline_static_binner.py  baseline_threshold_optimizer.py  baseline_trend_follower.py  challenger.py
utils/: game_tree.py  runner.py  tree_arrays.py
viz/: viz_prep.py  viz_tools.py
